lab 10 is added

--- a/Lab7bUsingfetchasync/index.html
+++ b/Lab7bUsingfetchasync/index.html
@@ -13,66 +13,11 @@
 </head>
 <body>
    
-    <div class="container" style="border: blue solid 5px; background-color:lightskyblue;margin:20px; width: 600px; justify-items: center;margin-left:300px">
-        <h1 style="text-align: center;font-style: italic;text-transform: uppercase;">Employees List</h1>
+    <div class="container " style="border: blue solid 5px; background-color:lightskyblue;margin:20px; width: 600px; justify-items: center;margin-left:300px">
+        <h1 style="text-align: center;text-decoration: underline;">Employees List</h1>
+        <div id="employee-list"></div>
 
-        <div class="row border-top">
-            <div class="col ">
-                <img id="img0" src="#" />
-            </div>
-            <div class="col ">
-                <h3 id="name0"></h3>
-                
-                <p id="phone0"></p>
-                <p id="email0"></p>
-            </div>
-        </div>
-
-        <div class="row border-top">
-            <div class="col">
-                <img id="img1" src="#" />
-            </div>
-            <div class="col">
-                <h3 id="name1"></h3>
-                <p id="phone1"></p>
-                <p id="email1"></p>
-            </div>
-        </div>
-
-        <div class="row border-top">
-            <div class = "col">
-                <img id ="img2" src="#" />
-            </div>
-            <div class="col">
-                <h3 id ="name2"></h3>
-                <p  id ="phone2"></p>
-                <p  id ="email2"></p>
-            </div>
-        </div>
-
-        <div class="row border-top">
-            <div class ="col">
-                <img id ="img3" src="#" />
-            </div>
-            <div class="col">
-                <h3 id ="name3"></h3>
-                <p  id ="phone3"></p>
-                <p  id ="email3"></p>
-            </div>
-        </div>
-
-        <div class="row border-top border-bottom">
-            <div class="col">
-                <img id="img4" src="#" />
-            </div>
-            <div class="col">
-                <h3 id="name4"></h3>
-                <p  id="phone4"></p>
-                <p  id="email4"></p>
-            </div>
-        </div>
-        
-        <button id="refeshBtn" class="btn btn-success" style="margin-left: 170px;">Refresh</button>
+        <button id="refeshBtn" class="btn btn-success" style="margin-left: 200px;">Refresh</button>
     </div>
 </body>
 </html>
